# cosmos_coinflip_kujira

./: Cargo.toml
contracts/coin-flip/: Cargo.toml
contracts/coin-flip/schema/: coin-flip.json
contracts/coin-flip/src/: contract.rs  error.rs  helpers.rs  msg.rs  state.rs  sudo.rs  types.rs
contracts/coin-flip/src/testing/: mod.rs  test_contract.rs  test_distribute.rs  test_migration.rs  test_multiple_denoms.rs  test_queries.rs  test_streak.rs  test_sudo.rs  test_types.rs
contracts/coin-flip/src/testing/utils/: executes.rs  helpers.rs  queries.rs  setup.rs
devtools/: add_denom.sh  distribute.sh  init_main.sh  migrate.sh  prop.sh  upload.sh
