[workspace]
members  = ["contracts/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.8.2"

license    = "Apache-2.0"
repository = "https://github.com/Art3miX/cosmos-coin-flip"
homepage   = "https://cosmoscoinflip.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[workspace.dependencies]
cosmwasm-schema  = "1.5.0"
cosmwasm-std     = "1.5.0"
cosmwasm-storage = "1.5.0"
cw-storage-plus  = "1.2.0"
cw-utils         = "1.0.3"
cw2              = "1.1.2"
cw721            = "0.16.0"
cw721-base       = { version = "0.16.0", features = ["library"] }
schemars         = "0.8.16"
serde            = { version = "1.0.147", default-features = false, features = ["derive"] }
thiserror        = "1.0.50"
anyhow           = "1"
sg721            = { version = "2.3.0" }
sg721-base       = { version = "2.3.0", features = ["library"] }
sg-std           = { version = "2.3.0" }

#v07
coin-flip-v07  = { package = "coin-flip", version = "0.7.2", git = "https://github.com/Cosmos-Coin-Flip/Cosmos-Coin-Flip.git", tag = "v0.7.2" }
sg721-base-v07 = { package = "sg721-base", version = "0.22.11", features = ["library"] }
sg-std-v07     = { package = "sg-std", version = "0.22.11" }

# dev deps
cw-multi-test = "0.19.0"
sg-multi-test = { version = "2.3.0" }

[profile.release.package.coin-flip]
codegen-units = 1
incremental   = false

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
